--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.2",
+    "@reduxjs/toolkit": "^1.9.5",
+    "next": "^13.4.3-canary.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5"
   }
 }
